<resources>
    <string name="socket_fail">网络请求失败</string>
    <string name="socket_error">网络连接异常</string>
    <string name="toast_socket_error">您当前的网络连接状况不佳,请稍后再试</string>
    <string name="password_new_prompt">密码由6~20位英文字母、数字或符号组成</string>
    <string name="lc_invalid_idcard">请输入正确的身份证号</string>
    <string name="business_description"><u>业务说明</u></string>
    <string name="go_exchange"><u>去兑换</u></string>
    <string name="creit_contract"><u>信贷合同披露</u></string>
    <string name="arrival_now">2小时内到账:不享受取出当日收益,运行时间为8:00-22:00,取出单笔最高10万,单日最多3次;</string>
    <string name="arrival_next">下个工作日到账:享受取出当日收益,当日23:00前的交易于下个工作日到账,23:00后交易将推迟1个工作日到账,取出单笔最高100万;</string>
    <string name="select_security_question_hint">请选择密保问题</string>
    <string name="security_question_answer_hint">答案：</string>
    <string name="answer_content">请填写内容</string>
    <string name="yes">确定</string>
    <string name="trans_manage">交易记录</string>
    <string name="load_records_finished">全部加载完成</string>
    <string name="frozen_account">您的账户被冻结,不能进行交易</string>
    <string name="security_question_setting_hint">密保问题用于找回密码等操作，是验证身份、保护账户安全的重要手段</string>
    <string name="querying_records">正在查询交易记录...</string>
    <string name="querying_records_more">正在查询更多交易记录...</string>
    <string name="collection_success">收款成功</string>
    <string name="collection_fail">收款失败</string>
    <string name="trans_drawmoney_protocal_text"><u>《拉卡拉自然日提前划款服务协议》</u></string>
    <string name="special_tips2">手续费相关说明,请参考页面右上角"业务说明"。</string>
    <string name="credit_card_data_ttile">还款信用卡及金额</string>
    <string name="xin_yongka_huan_kuan">信用卡还款</string>
    <string name="repay_confirm_btn">确定还款</string>
    <string name="input_cardNo">输入卡号</string>
    <string name="input_cardNo_confirm">再次确认卡号</string>
    <string name="repay_amount_new">还款金额</string>
    <string name="repay_amount_hint">请输入金额</string>
    <string name="repay_warn">还款提醒</string>
    <string name="crecard_sms_prompt">短信提醒</string>
    <string name="prompt_date_dialog_message">请输入提醒日期！</string>
    <string name="prompt_date_dialog_message_error">请正确输入日期！</string>
    <string name="prompt_date_list_day">日(每月)</string>
    <string name="toast_input_not_xinyongka_equal">输入的信用卡无效</string>
    <string name="toast_input_not_xinyongka">请输入信用卡</string>
    <string name="prompt_date">提醒日期</string>
    <string name="notification_time_submit">设置</string>
    <string name="notification_time_cancel">取消</string>
    <string name="not_credit_prompt">暂无信用卡数据</string>
    <string name="select_crecard">选择历史还款信用卡</string>
    <string name="history_credit_card">历史还款信用卡</string>
    <string name="connection_time_out">网络连接超时</string>
    <string name="photo_not_commit">您未提交身份证照片</string>
    <string name="apply_name">申请人姓名</string>
    <string name="loan_apply_money1">申请金额&#160;&#160;&#160;&#160;</string>
    <string name="confirmfee">手续费&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="owingloan_card">还贷储蓄卡</string>
    <string name="loan_instalments">还贷分期&#160;&#160;&#160;&#160;</string>
    <string name="owingloantime">到期还贷日</string>
    <string name="confirm_info">请您在到期还款日前存入足够资金，以免扣收不成功产生滞纳金及利息，影响您的信用记录</string>
    <string name="loan_credit_card">目标信用卡</string>
    <string name="confirm_apply">确认申请</string>
    <string name="smscode">短信验证码</string>
    <string name="code_null">请输入验证码</string>
    <string name="name_input">输入申请人姓名</string>
    <string name="wallet_ID_card">身份证号</string>
    <string name="place_tag">所在城市</string>
    <string name="unit_name_tag">单位名称</string>
    <string name="unit_phone_tag">单位电话</string>
    <string name="id_edit_input">输入申请人身份证号码</string>
    <string name="id_delete_message">确定要删除这条消息吗？</string>
    <string name="place_input">请选择单位所在城市</string>
    <string name="unit_name">请输入单位全称</string>
    <string name="loan_city">城市</string>
    <string name="loan_city1">居住城市</string>
    <string name="loan_city_input">选择申请人居住城市</string>
    <string name="loan_city_input1">请选择居住城市</string>
    <string name="loan_address">住址</string>
    <string name="loan_address1">居住地址</string>
    <string name="uint_address_tag">单位地址</string>
    <string name="loan_address_input">输入申请人住址</string>
    <string name="loan_address_input1">请填写详细居住地址</string>
    <string name="loan_address_input2">请填写详细单位地址</string>
    <string name="loan_high_level">最高学历</string>
    <string name="loan_high_level_input">选择申请人最高学历</string>
    <string name="email">电子邮箱</string>
    <string name="email1">电子邮箱</string>
    <string name="loan_email">输入申请人E-mail地址</string>
    <string name="loan_email1">请输入电子邮箱</string>
    <string name="info">示例及说明</string>
    <string name="contact_name">联系人姓名</string>
    <string name="contact_name1">亲属姓名</string>
    <string name="contact_name_input">输入直系亲属姓名</string>
    <string name="contact_name_input1">请输入亲属姓名</string>
    <string name="contact_mobileno">联系人手机号</string>
    <string name="contact_mobileno_input">输入直系亲属手机号</string>
    <string name="myperson_info">个人信息</string>
    <string name="change_info">信息变更</string>
    <string name="change_account">结算账号变更</string>
    <string name="payforyou">替你还</string>
    <string name="credit_card_NO">信用卡卡号</string>
    <string name="input_credit_card_NO">输入信用卡卡号</string>
    <string name="receiver_phone_open_bank">开户行</string>
    <string name="input_receiver_phone_open_bank">选择信用卡开户行</string>
    <string name="qyuebank_info">归还借款签约银行卡</string>
    <string name="depositCardNo">储蓄卡卡号</string>
    <string name="depositCardNo_input1">输入签约银行卡卡号</string>
    <string name="select_depositCard_bank">选择签约卡开户行</string>
    <string name="loan_bank_info">审核通过后，资金将实时转入您本人名下信用卡账户。到期还款日，系统将自动从您绑定的储蓄卡中自动收款。</string>
    <string name="remit_success_nav_title">受理成功</string>
    <string name="loan_notification11">您的申请已被受理，我们会尽快处理并短信通知审核结果。短信预计10分钟后到达，请注意查收。</string>
    <string name="loan_notification21">您还可通过登录手机收款宝或关注拉卡拉微信服务号随时关注、查询业务办理情况。</string>
    <string name="loan_notification3">感谢您对拉卡拉的支持！</string>
    <string name="loan_notification4">拉卡拉拥有本业务的最终解释权。</string>
    <string name="loan_notification12">您的申请已被受理，但根据您的信用记录，您能够申请的借款额度被限定在3000元 以内。</string>
    <string name="loan_notification22">如您仍然需要借款，请在此额度内重新申请借款</string>
    <string name="remit_notification">受理通知</string>
    <string name="info_notification">信息提示</string>
    <string name="remit_fail_nav_title">受理失败</string>
    <string name="apply_again">重新申请</string>
    <string name="loan_apply_info">借款申请信息</string>
    <string name="loan_apply_money">申请金额</string>
    <string name="loan_apply_money_limit">限额1000-10000元</string>
    <string name="select_staging">选择周期</string>
    <string name="right_money">实际到帐金额</string>
    <string name="common_money">0.00</string>
    <string name="fee">手续费</string>
    <string name="loan_info1">您须在&#160;</string>
    <string name="loan_info2">&#160;一次性偿还&#160;</string>
    <string name="yuan">元</string>
    <string name="loan_please_select_period">请选择分期</string>
    <string name="please_input_apply_amouont">请输入申请金额</string>
    <string name="companyname">单位名称</string>
    <string name="companyname_input">输入所在单位名称</string>
    <string name="companyname_city_input">选择单位所在城市</string>
    <string name="jtwz_address_text">地址</string>
    <string name="companyname_address_input">输入单位地址</string>
    <string name="please_choose_date">请选择交易类型</string>
    <string name="loan_mobileno">电话</string>
    <string name="loan_mobileno_input">输入单位电话</string>
    <string name="loan_position">职位</string>
    <string name="loan_position_input">输入申请人职位名称</string>
    <string name="month_income">月收入</string>
    <string name="month_income_select">选择收入范围</string>
    <string name="company_info">工作信息</string>
    <string name="repayment_record">还款记录</string>
    <string name="loan_history_record">历史记录</string>
    <string name="description_of_business">业务说明</string>
    <string name="card_photo">身份证照片</string>
    <string name="acc_data_not_passed">很抱歉,您提交的资料未通过审核</string>
    <string name="photo_not_commit_zheng">请选择身份证正面照</string>
    <string name="photo_not_commit_fan">请选择身份证反面照</string>
    <string name="merchant_name_has_error">店铺名称仅支持中文、字母、数字及半角括号、逗号和句号</string>
    <string name="pleanse_selected_pri_public_type">请选择账户类型</string>
    <string name="open_account_bank_not_selected">未选择开户行</string>
    <string name="f_code_is_error">F码为数字和字母</string>
    <string name="re_input_cardNo">卡号格式有误，请重新输入卡号</string>
    <string name="not_support_bank">暂不支持此银行，请更换银行卡</string>
    <string name="open_bank_not_same">开户银行与卡号不匹配</string>
    <string name="committing_register_info">正在提交...</string>
    <string name="loading_id_photo">正在载入身份证照片...</string>
    <string name="id_no_input_error">您未输入身份证号,或者输入不正确</string>
    <string name="transfer_str1">零钱可转出余额：</string>
    <string name="transfer_str2">元，信用卡充值金额只可用于消费，不可提现，不可转出；</string>
    <string name="watch_support_bank">查看支持银行</string>
    <string name="cash_back_tips">已扣款的交易将返还扣款至付款银行卡账户</string>
    <string name="app_name">拉卡拉收款宝</string>
    <string name="main_title">收款宝</string>
    <string name="action_settings">Settings</string>
    <string name="jiaoyi_jilu">交易记录</string>
    <string name="record_query">交易查询</string>
    <string name="record_manager">交易记录</string>
    <string name="loan_service">信贷服务</string>
    <string name="jiaoyi_choose">交易筛选</string>
    <string name="share">分享</string>
    <string name="lakalaService">拉卡拉服务协议</string>
    <string name="servicePhone">客服电话</string>
    <string name="Copyright1">Copyright©2004 &#8211; 2016 lakala.com Inc.</string>
    <string name="Copyright2">All Rights Reserved</string>
    <string name="et_feedback">请写下您遇到的问题或建议</string>
    <string name="tv_limitnumber">还可输入200字</string>
    <string name="jiaoyi_detail">交易详情</string>
    <string name="repayment">还款</string>
    <string name="has_accepted">已受理</string>
    <string name="jiaoyi_jilu_no_data">暂无记录</string>
    <string name="jiaoyi_jilu_no_more_data">没有更多记录</string>
    <string name="crecard_date1">现在还款，预计</string>
    <string name="crecard_date2">到账</string>
    <string name="jiaoyi_jilu_delete">删除</string>
    <string name="jiaoyi_reminder">提示</string>
    <string name="jiaoyi_delete_alter_message">交易记录删除后不能恢复</string>
    <string name="jiaoyi_record_no_delete_alert_message">此交易正在处理中，不能删除</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="submitting">正在提交</string>
    <string name="uploading">上传中&#8230;</string>
    <string name="next_step">下一步</string>
    <string name="accept_text">同意</string>
    <string name="input_point_out">密码由8~32位英文字母、数字或符号组成</string>
    <string name="input_ori_pwd">请输入原密码</string>
    <string name="application_name">拉卡拉收款宝客户端(Android)</string>
    <string name="about_version_code">V1.0.0</string>
    <string name="about_client_photo">400-766-6666</string>
    <string name="about_registration_line1">Copyright©2004-2016 lakala.com Inc.</string>
    <string name="about_registration_line2">All Rights Reserved.</string>
    <string name="sure">确定</string>
    <string name="please_input_new_password">输入新密码</string>
    <string name="please_input_new_password_confirm">重新输入新密码</string>
    <string name="lkl_protocol_foryou">《拉卡拉“替你还”还款委托服务协议》</string>
    <string name="lkl_protocol_underline"><u>拉卡拉收款宝服务协议</u></string>
    <string name="lkl_protocol_shoudan_underline"><u>拉卡拉收款宝业务合作协议</u></string>
    <string name="lkl_protocol_service_wx"><u>拉卡拉扫码收款服务协议</u></string>
    <string name="ok">确定</string>
    <string name="next">下一步</string>
    <string name="about_client_title">客服电话：</string>
    <string name="app_info">软件信息</string>
    <string name="confirm_remit_protocal_text2">拉卡拉用户服务协议</string>
    <string name="branch">开户支行</string>
    <string name="branch_hint">请选择开户支行</string>
    <string name="city">所在省市</string>
    <string name="city_hint">请选择所在省市</string>
    <string name="area">所在地区</string>
    <string name="area_hint">请选择所在地区</string>
    <string name="branch_info_hint">请选择开户支行信息</string>
</resources>