<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/app_background_white"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/branch_info_hint"
        android:layout_marginTop="@dimen/content_margin_actionbar"
        style="@style/combination_little_title_style"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/labelEditText_bank"
            style="@style/labeledittext_sytle_no_rightpadding"
            android:paddingRight="10dp"
            app:labelText="开户银行"
            app:isText="true"
            app:text="21041********1254"/>
        <ImageView
            style="@style/combination_seperator_style"/>
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/labelEditText_city"
            style="@style/labeledittext_sytle_for_shoudan"
            app:labelText="@string/city"
            app:hint="@string/city_hint"
            app:rightArrowVisibility="VISIBLE"
            app:isText="true"
            app:rightIconSrc="@drawable/btn_arrow_go"/>
        <ImageView
            style="@style/combination_seperator_style"/>
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/labelEditText_area"
            style="@style/labeledittext_sytle_for_shoudan"
            app:labelText="@string/area"
            app:hint="@string/area_hint"
            app:rightArrowVisibility="VISIBLE"
            app:isText="true"
            app:rightIconSrc="@drawable/btn_arrow_go"/>
        <ImageView
            style="@style/combination_seperator_style"/>
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/labelEditText_branch"
            style="@style/labeledittext_sytle_for_shoudan"
            app:labelText="@string/branch"
            app:hint="@string/branch_hint"
            app:rightArrowVisibility="VISIBLE"
            app:isText="true"
            app:rightIconSrc="@drawable/btn_arrow_go"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btn_top_line"
        android:text="@string/ok"/>
</LinearLayout>
