<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    style="@style/app_background_white"
    android:layout_height="match_parent">

    <ImageView
        style="@style/remittance_seperator_horizong"
        android:layout_marginTop="@dimen/dimen_40"/>
    <com.lakala.ui.component.LabelEditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        style="@style/labeledittext_sytle_for_shoudan"
        android:id="@+id/edit_password"
        android:padding="@dimen/dimen_20"
        app:labelText="原登录密码"
        app:labelTextSize="@dimen/font_size_normal"
        app:labelTextColor="@color/black"
        app:hint="@string/input_ori_pwd"
        app:textSize="@dimen/font_size_normal"
        app:inputType="textPassword"
        app:editGravity="right"/>
    <ImageView
        style="@style/remittance_seperator_horizong"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_20"
        android:text="@string/input_point_out"/>

    <com.lakala.ui.component.ScreenWeightTextView
        android:id="@+id/btn_next"
        style="@style/single_btn_style"
        android:layout_margin="@dimen/dimen_20"
        android:text="@string/next_step"/>

</LinearLayout>