<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/app_background_white"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <View
        style="@style/header_footer"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/edit_old_password"
            style="@style/labeledittext_sytle_for_shoudan"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:editGravity="right"
            app:hint="输入原密码"
            app:inputType="textPassword"
            app:labelText="当前密码"/>
        <View style="@style/seperator"
            android:layout_marginLeft="15dp"/>
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/edit_new_password"
            style="@style/labeledittext_sytle_for_shoudan"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:editGravity="right"
            app:hint="@string/please_input_new_password"
            app:inputType="textPassword"
            app:labelText="新密码"/>
        <View style="@style/seperator"
            android:layout_marginLeft="15dp"/>
        <com.lakala.ui.component.LabelEditText
            android:id="@+id/edit_new_password_confirm"
            style="@style/labeledittext_sytle_for_shoudan"
            app:editGravity="right"
            app:hint="@string/please_input_new_password_confirm"
            app:inputType="textPassword"
            app:labelText="确认新密码"/>
        <View style="@style/seperator"/>

    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        style="@style/combination_little_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_point_out"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_sure"
        style="@style/btn_top_line"
        android:text="@string/sure"/>

</LinearLayout>